<resources>
    <string name="app_name">Lab 6</string>
    <string name="action_settings">Settings</string>
    <string name="empty_list_placeholder">empty list placeholder</string>
    <string name="start_by_adding_new_group_members">Start by adding new group members</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="remove_student_from_list_icon">remove student from list icon</string>
    <string name="image_marking_student_as_a_headman_of_group">image marking student as a headman of group</string>
    <string name="example_23534_2">Example: 23534/2</string>
    <string name="enter_your_group_number_below">Enter your group number below</string>
    <string name="start_editing_group">Start editing group</string>
    <string name="e_mail">E-mail</string>
    <string name="phone">Phone</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="add_student">Add student</string>
    <string name="headman">Headman</string>
    <string name="fill_in_the_student_s_information">Fill in the student\'s information</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_group_name">Wrong or empty group entered</string>
</resources>
